--- a/CS.Security/appsettings.json
+++ b/CS.Security/appsettings.json
@@ -16,6 +16,25 @@
     "RefreshTokenExpirationMinutes": "43200",
     "Issuer": "https://localhost:7007",
     "Audience": "https://localhost:7007"
-  }
+  },
+  
+  "Serilog": {
+    "Using": ["Serilog.Sinks.File"],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\EXSOFT\\Security.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName"],
+    "Properties": {
+      "ApplicationName": "Your ASP.NET Core App"
+    }
+  
+}
 
 }
